--- a/dbt/airquality/profiles.yml
+++ b/dbt/airquality/profiles.yml
@@ -9,15 +9,15 @@ airquality:
       location: EU
       threads: 4 # Must be a value of 1 or greater
       keyfile_json:
-        type: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.type}}"
-        project_id: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.project_id}}"
-        private_key_id: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.private_key_id}}"
-        private_key: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.private_key}}"
-        client_email: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.client_email}}"
-        client_id: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.client_id}}"
-        auth_uri: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.auth_uri}}"
-        token_uri: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.token_uri}}"
-        auth_provider_x509_cert_url: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.auth_provider_x509_cert_url}}"
-        client_x509_cert_url: "{{prefect.blocks.gcp-credentials.newcreds.service_account_info.client_x509_cert_url}}"
+        type: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.type}}"
+        project_id: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.project_id}}"
+        private_key_id: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.private_key_id}}"
+        private_key: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.private_key}}"
+        client_email: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.client_email}}"
+        client_id: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.client_id}}"
+        auth_uri: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.auth_uri}}"
+        token_uri: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.token_uri}}"
+        auth_provider_x509_cert_url: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.auth_provider_x509_cert_url}}"
+        client_x509_cert_url: "{{prefect.blocks.gcp-credentials.airquality-gcp-credentials.service_account_info.client_x509_cert_url}}"
         universe_domain: "googleapis.com"
 
